--- a/Select/Select.module.css
+++ b/Select/Select.module.css
@@ -1,9 +1,7 @@
 .container {
 	display: flex;
 	gap: 4px;
-	position: relative;
 	width: fit-content;
-	font-family: Arial, sans-serif;
 }
 
 .selectInput {
@@ -28,22 +26,28 @@
 }
 
 .optionsContainer {
-	position: absolute;
-	width: 100%;
-	max-height: 200px;
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
+	padding: 8px;
+	
+	width: 97%;
+	height: 50%;
 	overflow-y: auto;
-	margin-top: 45px;
+	margin-left: 1.5%;
+	/* margin-top: 45px; */
 	border: 2px solid var(--color-secondary);
 	border-radius: 12px;
 	background-color: var(--color-background);
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	z-index: 1;
+
 }
 
 .optionItem {
 	padding: 8px 12px;
 	cursor: pointer;
 	color: var(--color-text);
+	border-radius: 8px;
 }
 
 .optionItem:hover {
