--- a/Button/Button.module.css
+++ b/Button/Button.module.css
@@ -49,6 +49,11 @@
 	background-color: var(--color-background);
 }
 
+.button[data-variant="delete"] {
+	color: var(--color-text);
+	background-color: var(--color-red);
+}
+
 .button[data-variant="ghost"] {
 	color: var(--color-text);
 	background-color: transparent;
