--- a/Select/Select.module.css
+++ b/Select/Select.module.css
@@ -30,9 +30,9 @@
 	flex-direction: column;
 	gap: 4px;
 	padding: 8px;
-	
+
 	width: 97%;
-	height: 50%;
+	max-height: 50%;
 	overflow-y: auto;
 	margin-left: 1.5%;
 	/* margin-top: 45px; */
@@ -40,7 +40,6 @@
 	border-radius: 12px;
 	background-color: var(--color-background);
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
 }
 
 .optionItem {
