--- a/Badge/Badge.module.css
+++ b/Badge/Badge.module.css
@@ -9,7 +9,7 @@
 	/* color: var(--color-background);
 	background-color: var(--color-primary); */
 
-	color: var(--color-primary);
+	color: var(--color-text);
 	background-color: var(--color-secondary);
 	/* border: 2px solid var(--color-primary); */
 	border-radius: 16px;
