--- a/Accordion/Accordion.module.css
+++ b/Accordion/Accordion.module.css
@@ -1,16 +1,21 @@
 .accordion {
 	display: flex;
 	flex-direction: column;
-	cursor: pointer;
-	padding: 4px;
-	gap: 4px;
-	border-radius: 12px;
+	gap: 8px;
 
 	.header {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		user-select: none;
+		cursor: pointer;
+		padding: 6px 12px;
+		border-radius: 12px;
+		transition: var(--animation);
+
+		&:hover {
+			background-color: var(--md-sys-color-surface-variant);
+		}
 	}
 
 	.content {
