--- a/Loader/Loader.module.css
+++ b/Loader/Loader.module.css
@@ -10,21 +10,13 @@
 .loader {
 	width: 35px;
 	aspect-ratio: 1;
-	--_g: no-repeat radial-gradient(farthest-side, var(--color-primary) 94%, #00000000);
-	background:
-		var(--_g) 0 0,
-		var(--_g) 100% 0,
-		var(--_g) 100% 100%,
-		var(--_g) 0 100%;
+	--_g: no-repeat radial-gradient(farthest-side, var(--md-primary) 94%, #00000000);
+	background: var(--_g) 0 0, var(--_g) 100% 0, var(--_g) 100% 100%, var(--_g) 0 100%;
 	background-size: 40% 40%;
 	animation: l38 0.7s infinite;
 }
 @keyframes l38 {
 	100% {
-		background-position:
-			100% 0,
-			100% 100%,
-			0 100%,
-			0 0;
+		background-position: 100% 0, 100% 100%, 0 100%, 0 0;
 	}
 }
