--- a/Button/Button.module.css
+++ b/Button/Button.module.css
@@ -17,11 +17,10 @@
 	text-decoration: none;
 
 	&:hover {
-		scale: 1.05;
 	}
 
 	&:active {
-		scale: 0.95;
+		transform: scale(0.95);
 	}
 
 	* {
@@ -48,7 +47,6 @@
 	border: 2px solid var(--md-surface-container);
 
 	&:hover {
-		scale: 1;
 		border: 2px solid var(--md-surface-variant);
 	}
 }
@@ -85,6 +83,8 @@
 .button[data-aslink="true"] {
 	padding: 0;
 	> * {
+		width: 100%;
+		height: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
