--- a/Switch/Switch.module.css
+++ b/Switch/Switch.module.css
@@ -26,7 +26,7 @@
 
 		&[data-disabled="true"] {
 			cursor: auto;
-			filter: brightness(0.8);
+			filter: brightness(0.75);
 		}
 
 		.state {
@@ -41,7 +41,7 @@
 			}
 
 			&[data-disabled="true"] {
-				/* background-color: var(--color-ternary); */
+				background-color: var(--md-surface-container-highest);
 			}
 		}
 	}
