Add orients in ListView

--- a/ListView/ListView.module.css
+++ b/ListView/ListView.module.css
@@ -1,23 +1,39 @@
 .list_view {
 	width: 100%;
 	display: flex;
-	flex-direction: column;
 	gap: 4px;
 
 	& > * {
 		padding: 12px;
-		border-radius: 10px;
+		border-radius: 8px !important;
 		color: var(--md-on-surface);
 		background-color: var(--md-surface-container);
 	}
 
-	& > *:first-child {
-		border-top-left-radius: 18px;
-		border-top-right-radius: 18px;
+	&[data-orientation="vertical"] {
+		flex-direction: column;
+		& > *:first-child {
+			border-top-left-radius: 18px !important;
+			border-top-right-radius: 18px !important;
+		}
+
+		& > *:last-child {
+			border-bottom-left-radius: 18px !important;
+			border-bottom-right-radius: 18px !important;
+		}
 	}
 
-	& > *:last-child {
-		border-bottom-left-radius: 18px;
-		border-bottom-right-radius: 18px;
+	&[data-orientation="horizontal"] {
+		flex-direction: row;
+
+		& > *:first-child {
+			border-top-left-radius: 18px !important;
+			border-bottom-left-radius: 18px !important;
+		}
+
+		& > *:last-child {
+			border-top-right-radius: 18px !important;
+			border-bottom-right-radius: 18px !important;
+		}
 	}
 }
