--- a/Header/Header.module.css
+++ b/Header/Header.module.css
@@ -1,10 +1,18 @@
 .header {
 	width: 100%;
-	height: 50px;
+	/* height: 50px; */
 
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: fixed;
+	left: 0;
+	top: 0;
+	padding: 16px 16px;
+
+	z-index: 99999;
+
+	background-color: var(--md-surface);
 
 	.left,
 	.right {
